src/test/ui/nll/match-cfg-fake-edges.stderr
error[E0381]: used binding `x` isn't initialized
  --> $DIR/match-cfg-fake-edges.rs:21:13
   |
LL |     let x;
   |         - binding declared here but left uninitialized
...
LL |         _ if { x = 2; true } => 1,
   |                ----- binding initialized here in some conditions
LL |         _ if {
LL |             x;
   |             ^ `x` used here but it isn't initialized
   |
help: consider assigning a value
   |
LL |     let x = 0;
   |           +++

error[E0382]: use of moved value: `x`
  --> $DIR/match-cfg-fake-edges.rs:35:13
   |
LL |     let x = String::new();
   |         - move occurs because `x` has type `String`, which does not implement the `Copy` trait
...
LL |         false if { drop(x); true } => 1,
   |                         - value moved here
LL |         true => {
LL |             x;
   |             ^ value used here after move

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0381, E0382.
For more information about an error, try `rustc --explain E0381`.
